[package]
name = "iron-arrow"
version = "0.1.0"
description = "Rust implementation of Apache Arrow"
homepage = "https://github.com/jihoonson/iron-arrow"
repository = "https://github.com/jihoonson/iron-arrow"
authors = ["Jihoon Son <jihoonson@apache.org>"]
license = "Apache-2.0"
keywords = [ "arrow" ]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
name = "arrow"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
num = "0.1"
rand = "0.3"

[build-dependencies]
gcc = "0.3"
